--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
 		
 		<nav>
 			<ul>
-				<img src="images/Sleek_3D_Logo_with_Celebration_Theme-removebg-preview.png" width=100  height=100>
+				<img src="IMAGES/Sleek_3D_Logo_with_Celebration_Theme-removebg-preview.png" width=100  height=100>
 				<li class="nav-item"><a href="home.html">Home</a></li>
 				<li class="nav-item"><a href="about us.html">About us</a></li>
 				<li class="nav-item"><a href="events.html">Events</a></li>
 				<li class="nav-item"><a href="contact us.html">Contact us</a></li>
 			</ul>
 		</nav>
-		<img src="images/cover .jpg" width="100%" height="600">		
+		<img src="IMAGES/cover .jpg" width="100%" height="600">		
 		<main>
 			<h2>Popular Events</h2>
 			<section>
 			<div class="event-container">
 				<div class="event-card">
-					<img src="images/meet summit.jpg"width="640" height="385">
+					<img src="IMAGES/meet summit.jpg"width="640" height="385">
 					<h2><i class="fa fa-tag" aria-hidden="true"></i> Tech Summit Kenya</h2>
 					<P><i class="fa fa-user-circle" aria-hidden="true"></i> Organizer:TechGurus</p>
 					<p><i class="fa fa-calendar" aria-hidden="true"></i> Date/Time:5th Aug 2025,12pm</p>
@@ -48,7 +48,7 @@
 					<button>Book Slot</button>
 				</div>
 				<div class="event-card">
-					<img src="images/food_fest.jpg">
+					<img src="IMAGES/food_fest.jpg">
 					<h2><i class="fa fa-tag" aria-hidden="true"></i> Food And Drink Fest</h2>
 					<P><i class="fa fa-user-circle" aria-hidden="true"></i> Organizer:Cascade Catering</p>
 					<p><i class="fa fa-calendar" aria-hidden="true"></i> Date/Time:10th Oct 2025,12pm</p>
@@ -56,7 +56,7 @@
 					<button>Book Slot</button>
 				</div>
 				<div class="event-card">
-					<img src="images/colour_fest.jpg"width="640" height="385">
+					<img src="IMAGES/colour_fest.jpg"width="640" height="385">
 					<h2><i class="fa fa-tag" aria-hidden="true"></i> Colour fest</h2>
 					<P><i class="fa fa-user-circle" aria-hidden="true"></i> Organizer:TechGurus</p>
 					<p><i class="fa fa-calendar" aria-hidden="true"></i> Date/Time:24th Aug 2025,12pm</p>
@@ -64,7 +64,7 @@
 					<button>Book Slot</button>
 				</div>
 				<div class="event-card">
-					<img src="images/tuner_fest.jpg"width="640" height="385">
+					<img src="IMAGES/tuner_fest.jpg"width="640" height="385">
 					<h2><i class="fa fa-tag" aria-hidden="true"></i> Tuner Fest</h2>
 					<P><i class="fa fa-user-circle" aria-hidden="true"></i> Organizer:Alhusain Motors</p>
 					<p><i class="fa fa-calendar" aria-hidden="true"></i> Date/Time:14th Sep 2025,12pm</p>
@@ -72,7 +72,7 @@
 					<button>Book Slot</button>
 				</div>
 				<div class="event-card">
-					<img src="images/concert.jpg"width="640" height="385">
+					<img src="IMAGES/concert.jpg"width="640" height="385">
 					<h2><i class="fa fa-tag" aria-hidden="true"></i> Skeng Concert Performance</h2>
 					<P><i class="fa fa-user-circle" aria-hidden="true"></i> Organizer:Mike D Baller</p>
 					<p><i class="fa fa-calendar" aria-hidden="true"></i> Date/Time:22th Nov 2025,12pm</p>
@@ -80,7 +80,7 @@
 					<button>Book Slot</button>
 				</div>
 				<div class="event-card">
-					<img src="images/comedy.jpg"width="640" height="385">
+					<img src="IMAGES/comedy.jpg"width="640" height="385">
 					<h2><i class="fa fa-tag" aria-hidden="true"></i> Churchil Show</h2>
 					<P><i class="fa fa-user-circle" aria-hidden="true"></i> Organizer:NTV</p>
 					<p><i class="fa fa-calendar" aria-hidden="true"></i> Date/Time:5th Dec 2025,8pm</p>
@@ -88,7 +88,7 @@
 					<button>Book Slot</button>
 				</div>
 				<div class="event-card">
-					<img src="images/jockey.jpg"width="640" height="385">
+					<img src="IMAGES/jockey.jpg"width="640" height="385">
 					<h2><i class="fa fa-tag" aria-hidden="true"></i> Jockey KE</h2>
 					<P><i class="fa fa-user-circle" aria-hidden="true"></i> Organizer:Cedar Valley Stables</p>
 					<p><i class="fa fa-calendar" aria-hidden="true"></i> Date/Time:20th Sep 2025,10am</p>
@@ -96,7 +96,7 @@
 					<button>Book Slot</button>
 				</div>
 				<div class="event-card">
-					<img src="images/Nothing_phone.PNG"width="640" height="385">
+					<img src="IMAGES/Nothing_phone.PNG"width="640" height="385">
 					<h2><i class="fa fa-tag" aria-hidden="true"></i> Nothing Phone 3 Launch KE</h2>
 					<P><i class="fa fa-user-circle" aria-hidden="true"></i> Organizer:ExecXperience</p>
 					<p><i class="fa fa-calendar" aria-hidden="true"></i> Date/Time:15th Aug 2025,12pm</p>
