--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<button>Book Slot</button>
 				</div>
 				<div class="event-card">
-					<img src="IMAGES/concert.jpg"width="640" height="385">
+					<img src="IMAGES/Concert.jpg"width="640" height="385">
 					<h2><i class="fa fa-tag" aria-hidden="true"></i> Skeng Concert Performance</h2>
 					<P><i class="fa fa-user-circle" aria-hidden="true"></i> Organizer:Mike D Baller</p>
 					<p><i class="fa fa-calendar" aria-hidden="true"></i> Date/Time:22th Nov 2025,12pm</p>
